pkg/tests/testthat/errors/mdl/ulfunc.mdl
ul_function eta(x, y);

ident x = eta(x, y) + 1;
